--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -13,13 +13,14 @@
               android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
+        android:id="@+id/sign_in_button_nav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="visible"
         tools:visibility="gone"
-        android:clickable="false"/>
+        android:clickable="false"
+        android:onClick="signIn"/>
 
     <LinearLayout
         android:id="@+id/sign_out_and_disconnect"
@@ -38,13 +39,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/sign_out"/>
-
-        <Button
-            android:id="@+id/disconnect_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/disconnect"/>
 
         <TextView
             android:id="@+id/status"
