--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -15,6 +15,7 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
+
         <ImageView
             android:id="@+id/google_icon"
             android:layout_width="48dp"
@@ -34,6 +35,12 @@
             android:textColor="@android:color/secondary_text_light"
             android:textSize="36sp"/>
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/profile_pic"
+            android:layout_gravity="center_horizontal"/>
+
         <TextView
             android:id="@+id/status"
             android:layout_width="wrap_content"
@@ -49,6 +56,7 @@
             android:text="@string/email"
             android:textColor="@android:color/black"
             android:textSize="14sp"/>
+
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
