--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -18,14 +18,17 @@
 
         <ImageView
             android:id="@+id/imgAvatar"
+            android:src="@drawable/ic_account_circle_24dp"
             android:layout_width="64dp"
             android:layout_height="64dp"
+            android:background="@drawable/circle"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"/>
+
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -40,19 +43,22 @@
 
             <TextView
                 android:id="@+id/status"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:textColor="@android:color/white"
+                android:text="@string/tap_to_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@android:color/secondary_text_light"
                 android:textSize="14sp"
                 android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/txtUserEmail"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:textColor="@android:color/white"/>
+                android:text="@string/nav_header_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:textColor="@android:color/secondary_text_light"
+                android:textSize="14sp"/>
         </LinearLayout>
     </RelativeLayout>
 
