--- a/app/src/main/res/layout/fragment_new.xml
+++ b/app/src/main/res/layout/fragment_new.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textSize="45dp"
-        android:text="NEW"
+        android:text="No workouts recorded"
         android:textStyle="bold"/>
 
 
@@ -27,6 +27,6 @@
         android:textSize="12dp"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
-        android:text="Edit fragment_home.xml to change the appearance"/>
+        android:text="Press the '+' icon to record a workout"/>
 
 </RelativeLayout>
