--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,29 +7,29 @@
             android:icon="@drawable/ic_menu_home"
             android:title="Home"/>
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery"/>
+            android:id="@+id/nav_history"
+            android:icon="@drawable/ic_menu_history"
+            android:title="History"/>
         <item
             android:id="@+id/nav_calendar"
             android:icon="@drawable/ic_menu_calendar"
             android:title="Calendar"/>
         <item
-            android:id="@+id/nav_trending"
-            android:icon="@drawable/ic_menu_trending"
+            android:id="@+id/nav_progress"
+            android:icon="@drawable/ic_menu_progress"
             android:title="Progress"/>
     </group>
 
     <item android:title="Tools">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share"/>
+                android:id="@+id/nav_timer"
+                android:icon="@drawable/ic_menu_timer"
+                android:title="Timer"/>
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send"/>
+                android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_menu_settings"
+                android:title="Settings"/>
         </menu>
     </item>
 
