--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,7 +16,7 @@
         android:onClick="click_screen"
         android:clickable="true">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgAvatar"
             android:src="@drawable/ic_account_circle_24dp"
             android:layout_width="64dp"
