--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/nav_header_height"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:background="@android:color/white"
                 android:gravity="bottom"
                 android:orientation="vertical">
@@ -58,6 +59,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:visibility="visible"
+            tools:visibility="gone"
             android:id="@+id/user_name"
             android:layout_alignTop="@+id/imgAvatar"
             android:layout_centerHorizontal="true"/>
