--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -21,17 +21,50 @@
         android:elevation="2dp">
 
 
-        <Spinner
+        <Spinner 
             android:layout_width="match_parent"
         android:layout_height="wrap_content"
             android:id="@+id/spinner"
-        android:hint="@string/enter_note_here"
-            />
+            android:hint="@string/enter_note_here"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="sets"
+                android:background="@color/background"
+                android:padding="10dp"
+                android:elevation="2dp"
+                android:layout_weight="1"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="reps"
+                android:padding="10dp"
+                android:background="@color/background"
+                android:layout_weight="1"
+                android:elevation="2dp"
+                android:textAlignment="center"/>
+
+        </LinearLayout>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/editText"
+            android:padding="10dp"
             android:layout_gravity="center_horizontal"/>
 
 
