--- a/app/src/main/res/layout/fragment_new.xml
+++ b/app/src/main/res/layout/fragment_new.xml
@@ -14,7 +14,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:textSize="45dp"
+        android:textSize="45sp"
         android:text="No workouts recorded"
         android:textStyle="bold"/>
 
@@ -24,7 +24,7 @@
         android:layout_centerInParent="true"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:text="Press the '+' icon to record a workout"/>
