--- a/app/src/main/res/layout/new_set.xml
+++ b/app/src/main/res/layout/new_set.xml
@@ -16,12 +16,16 @@
     <EditText
         android:id="@+id/editText1"
         android:layout_width="0dp"
+        android:inputType="phone"
+        android:digits="1234567890"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="0dp"
+        android:inputType="phone"
+        android:digits="1234567890"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
 
