Restrict the amount of weight (<1000) and reps (<100) that can be entered

--- a/app/src/main/res/layout/new_set.xml
+++ b/app/src/main/res/layout/new_set.xml
@@ -16,6 +16,7 @@
     <EditText
         android:id="@+id/editText1"
         android:layout_width="0dp"
+        android:maxLength="3"
         android:inputType="phone"
         android:digits="1234567890"
         android:layout_height="wrap_content"
@@ -24,6 +25,7 @@
     <EditText
         android:id="@+id/editText2"
         android:layout_width="0dp"
+        android:maxLength="2"
         android:inputType="phone"
         android:digits="1234567890"
         android:layout_height="wrap_content"
