--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -75,12 +75,14 @@
                 android:layout_width="0dp"
                 android:inputType="phone"
                 android:digits="1234567890"
+                android:maxLength="3"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:inputType="phone"
+                android:maxLength="2"
                 android:digits="1234567890"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
