--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -9,7 +9,6 @@
               android:background="@color/background"
               tools:context=".EditorActivity">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,11 +64,17 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <!--
+                        <include android:id="@+id/textView1" layout="@layout/new_set" />
+            -->
+
             <TextView
                 android:layout_width="0dp"
+                android:id="@+id/textView2"
                 android:layout_height="wrap_content"
                 android:text="Set 1:"
                 android:layout_weight="1"/>
+
 
             <EditText
                 android:layout_width="0dp"
