--- a/app/src/main/res/layout/new_set.xml
+++ b/app/src/main/res/layout/new_set.xml
@@ -7,10 +7,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Set 2:"
+        android:text="Set:"
         android:layout_weight="1"/>
 
     <EditText
