--- a/app/src/main/res/layout/new_set.xml
+++ b/app/src/main/res/layout/new_set.xml
@@ -17,6 +17,7 @@
         android:id="@+id/editText1"
         android:layout_width="0dp"
         android:maxLength="3"
+        android:gravity="center"
         android:inputType="phone"
         android:digits="1234567890"
         android:layout_height="wrap_content"
@@ -26,6 +27,7 @@
         android:id="@+id/editText2"
         android:layout_width="0dp"
         android:maxLength="2"
+        android:gravity="center"
         android:inputType="phone"
         android:digits="1234567890"
         android:layout_height="wrap_content"
