--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,13 +1,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:paddingTop="16dp"
+              android:orientation="vertical"
               android:paddingBottom="16dp"
               android:background="@color/background"
               tools:context=".EditorActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/icons"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:elevation="2dp">
+
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/datePicker"
+            android:hint="@string/date"
+            android:background="@android:color/transparent"
+            android:focusable="false"
+            android:padding="10dp"
+            android:onClick="onClick1"/>
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="2sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +51,7 @@
 
 
         <Spinner
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
             android:hint="@string/enter_note_here"/>
@@ -69,7 +99,7 @@
                 android:layout_width="0dp"
                 android:id="@+id/textView2"
                 android:layout_height="wrap_content"
-                android:text="Set 1:"
+                android:text="@string/set"
                 android:layout_weight="1"/>
 
 
@@ -79,6 +109,7 @@
                 android:digits="1234567890"
                 android:maxLength="3"
                 android:gravity="center"
+                android:focusable="true"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
 
@@ -116,14 +147,6 @@
 
 
         </LinearLayout>
-
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText"
-            android:padding="10dp"
-            android:layout_gravity="center_horizontal"/>
 
 
     </LinearLayout>
