--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -7,5 +7,6 @@
         android:title="@string/action_delete"
         android:icon="@drawable/ic_action_delete"
         android:orderInCategory="100"
+        android:onClick="onClick1"
         app:showAsAction="always"/>
 </menu>
