Added home screen widget

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -70,6 +70,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/weight"
+                android:contentDescription="@string/weight"
                 android:layout_weight="1"
                 android:textAlignment="center"/>
 
@@ -77,6 +78,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/reps"
+                android:contentDescription="@string/reps"
                 android:layout_weight="1"
                 android:textAlignment="center"/>
 
