--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -6,7 +6,7 @@
               android:background="@color/blue_grey_700"
               android:orientation="vertical"
               android:weightSum="5"
-              tools:context=".legacy.MainActivity">
+              tools:context=".MainActivity">
 
 
 <LinearLayout
