--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -2,22 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#55000000"
+              android:background="#FFFFFF"
               android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imageView"
+        android:contentDescription="@string/title_text"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:src="@mipmap/ic_launcher"
-        android:contextClickable="false"/>
+        android:contextClickable="true"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#faf6f6">
+        android:background="#FFFFFF">
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,7 +28,7 @@
             android:text="@string/widget"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:background="#faf6f6"
+            android:background="#FFFFFF"
             android:textColor="@color/common_plus_signin_btn_text_light"/>
 
 
@@ -40,7 +41,6 @@
             android:text="000"
             android:textSize="18sp"
             android:textColor="@color/common_plus_signin_btn_text_light"
-
             android:textStyle="bold"/>
 
         <ImageButton
