--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -1,12 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.example.plainolnotes.EditorActivity">
+      tools:context=".EditorActivity">
     <item
-        android:id="@+id/action_delete"
-        android:title="@string/action_delete"
-        android:icon="@drawable/ic_action_delete"
+        android:id="@+id/content_save"
+        android:title="@string/content_save"
+        android:icon="@drawable/content_save"
         android:orderInCategory="100"
-        android:onClick="onClick1"
         app:showAsAction="always"/>
 </menu>
