Adding everything to the database apart from the 3/4/5 etc sets (because of findViewById refs being wrong

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -31,7 +31,7 @@
             android:background="@android:color/transparent"
             android:focusable="false"
             android:padding="10dp"
-            android:onClick="onClick1"/>
+            android:onClick="onSelectDate"/>
 
     </LinearLayout>
 
