--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -33,7 +33,7 @@
 
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textViewWidget"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
