Read mode shows 1st exercise but not 2nd. Doesn't show exercise. Read mode removes + - buttons and save button and ability to edit texts.

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:id="@+id/linear"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:background="@color/icons"
@@ -112,6 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_remove_24dp"
+                android:id="@+id/removeSet"
                 android:onClick="removeSet"/>
 
 
