--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -4,7 +4,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:layout_marginTop="?android:attr/actionBarSize"
                 tools:context=".HistoryFragment">
+
 
     <ListView
         android:id="@android:id/list"
@@ -12,5 +14,4 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"/>
-
 </RelativeLayout>
