--- a/app/src/main/res/layout/new_set.xml
+++ b/app/src/main/res/layout/new_set.xml
@@ -7,14 +7,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/set_number"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Set:"
         android:layout_weight="1"/>
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/weight"
         android:layout_width="0dp"
         android:maxLength="3"
         android:gravity="center"
@@ -24,7 +24,7 @@
         android:layout_weight="1"/>
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/reps"
         android:layout_width="0dp"
         android:maxLength="2"
         android:gravity="center"
