--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -7,29 +7,28 @@
               android:paddingTop="16dp"
               android:orientation="vertical"
               android:paddingBottom="16dp"
-              android:background="@color/background"
+              android:background="@color/mdtp_white"
               tools:context=".EditorActivity">
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="2sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:background="@color/icons"
-        android:paddingTop="16dp"
-        android:elevation="2dp">
+        android:background="@color/mdtp_white">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ex_name_1"
+            android:textSize="16dp"
+            android:textColor="#000000"/>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
