--- a/app/src/main/res/layout/read_set.xml
+++ b/app/src/main/res/layout/read_set.xml
@@ -9,6 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/exercise_name"
         android:id="@+id/ex_name"/>
 
 </LinearLayout>
