Added ability to scroll exercise record

--- a/app/src/main/res/layout/read_container.xml
+++ b/app/src/main/res/layout/read_container.xml
@@ -1,4 +1,4 @@
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,7 +20,7 @@
         android:background="@color/blue_grey_600"
         android:orientation="vertical"/>
 
-</LinearLayout>
+</ScrollView>
 
 
 
